--- a/Clock.html
+++ b/Clock.html
@@ -31,10 +31,20 @@
 
     <style type="text/css">
     #Clock{
-        color: #f90;
-        font:blod 48px arial;
-        padding:50px;
-        margin: 40px;
+        color: #AAAAAA;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-size: 300px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    body{
+        background: #0d0d0d;
+        margin: 0px;
     }
     </style>
 
